--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -217,6 +217,12 @@
     <Filter Include="UVaOJ\11300">
       <UniqueIdentifier>{6d1bd489-728d-46de-97e7-9dabe1215459}</UniqueIdentifier>
     </Filter>
+    <Filter Include="UVaOJ\11400">
+      <UniqueIdentifier>{86aa141f-5d98-47a3-8ac3-1beb310faa44}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="UVaOJ\11500">
+      <UniqueIdentifier>{3031e626-1318-4cf1-b320-657b3104be21}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="UVaOJ\100.cpp">
@@ -1325,6 +1331,96 @@
     </ClCompile>
     <ClCompile Include="UVaOJ\11371.cpp">
       <Filter>UVaOJ\11300</Filter>
+    </ClCompile>
+    <ClCompile Include="UVaOJ\11387.cpp">
+      <Filter>UVaOJ\11300</Filter>
+    </ClCompile>
+    <ClCompile Include="UVaOJ\11388.cpp">
+      <Filter>UVaOJ\11300</Filter>
+    </ClCompile>
+    <ClCompile Include="UVaOJ\11389.cpp">
+      <Filter>UVaOJ\11300</Filter>
+    </ClCompile>
+    <ClCompile Include="UVaOJ\11392.cpp">
+      <Filter>UVaOJ\11300</Filter>
+    </ClCompile>
+    <ClCompile Include="UVaOJ\11401.cpp">
+      <Filter>UVaOJ\11400</Filter>
+    </ClCompile>
+    <ClCompile Include="UVaOJ\11413.cpp">
+      <Filter>UVaOJ\11400</Filter>
+    </ClCompile>
+    <ClCompile Include="UVaOJ\11428.cpp">
+      <Filter>UVaOJ\11400</Filter>
+    </ClCompile>
+    <ClCompile Include="UVaOJ\11450.cpp">
+      <Filter>UVaOJ\11400</Filter>
+    </ClCompile>
+    <ClCompile Include="UVaOJ\11455.cpp">
+      <Filter>UVaOJ\11400</Filter>
+    </ClCompile>
+    <ClCompile Include="UVaOJ\11456.cpp">
+      <Filter>UVaOJ\11400</Filter>
+    </ClCompile>
+    <ClCompile Include="UVaOJ\11461.cpp">
+      <Filter>UVaOJ\11400</Filter>
+    </ClCompile>
+    <ClCompile Include="UVaOJ\11462.cpp">
+      <Filter>UVaOJ\11400</Filter>
+    </ClCompile>
+    <ClCompile Include="UVaOJ\11470.cpp">
+      <Filter>UVaOJ\11400</Filter>
+    </ClCompile>
+    <ClCompile Include="UVaOJ\11479.cpp">
+      <Filter>UVaOJ\11400</Filter>
+    </ClCompile>
+    <ClCompile Include="UVaOJ\11494.cpp">
+      <Filter>UVaOJ\11400</Filter>
+    </ClCompile>
+    <ClCompile Include="UVaOJ\11498.cpp">
+      <Filter>UVaOJ\11400</Filter>
+    </ClCompile>
+    <ClCompile Include="UVaOJ\11517.cpp">
+      <Filter>UVaOJ\11500</Filter>
+    </ClCompile>
+    <ClCompile Include="UVaOJ\11518.cpp">
+      <Filter>UVaOJ\11500</Filter>
+    </ClCompile>
+    <ClCompile Include="UVaOJ\11520.cpp">
+      <Filter>UVaOJ\11500</Filter>
+    </ClCompile>
+    <ClCompile Include="UVaOJ\11526.cpp">
+      <Filter>UVaOJ\11500</Filter>
+    </ClCompile>
+    <ClCompile Include="UVaOJ\11530.cpp">
+      <Filter>UVaOJ\11500</Filter>
+    </ClCompile>
+    <ClCompile Include="UVaOJ\11541.cpp">
+      <Filter>UVaOJ\11500</Filter>
+    </ClCompile>
+    <ClCompile Include="UVaOJ\11547.cpp">
+      <Filter>UVaOJ\11500</Filter>
+    </ClCompile>
+    <ClCompile Include="UVaOJ\11565.cpp">
+      <Filter>UVaOJ\11500</Filter>
+    </ClCompile>
+    <ClCompile Include="UVaOJ\11572.cpp">
+      <Filter>UVaOJ\11500</Filter>
+    </ClCompile>
+    <ClCompile Include="UVaOJ\11577.cpp">
+      <Filter>UVaOJ\11500</Filter>
+    </ClCompile>
+    <ClCompile Include="UVaOJ\11586.cpp">
+      <Filter>UVaOJ\11500</Filter>
+    </ClCompile>
+    <ClCompile Include="UVaOJ\11588.cpp">
+      <Filter>UVaOJ\11500</Filter>
+    </ClCompile>
+    <ClCompile Include="UVaOJ\11597.cpp">
+      <Filter>UVaOJ\11500</Filter>
+    </ClCompile>
+    <ClCompile Include="UVaOJ\11559.cpp">
+      <Filter>UVaOJ\11500</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
